--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "weather-react",
   "version": "0.1.0",
   "private": true,
-  "homepage" : "http://localhost:3001/",
+  "homepage": "http://localhost:3001/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -22,7 +22,8 @@
   "eslintConfig": {
     "extends": [
       "react-app",
-      "react-app/jest"
+      "react-app/jest",
+      "@babel/plugin-transform-private-property-in-object"
     ]
   },
   "browserslist": {
@@ -36,5 +37,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-transform-private-property-in-object": "^7.24.5"
   }
 }
