Added a button to switch between temperature unit (Celsius and Fahrenheit)

--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
   "eslintConfig": {
     "extends": [
       "react-app",
-      "react-app/jest",
-      "@babel/plugin-transform-private-property-in-object"
+      "react-app/jest"
     ]
   },
   "browserslist": {
